# solitaire_solver

./: pyproject.toml  solitaire_enums.py  solitaire_solver.py
